--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h2>I'm a Web Developer</h2>
    <hr/>
     <h3><a href="/4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="/4.3 HTML Porfolio Project/assets/images/movie-ranking.png" alt="" height="200">
+    <img src="./assets/images/movie-ranking.png" alt="" height="200">
     <h3><a href="/4.3 HTML Porfolio Project/public/birthday-invite.html]">birthday-invite Project</a></h3>
-    <img src="/4.3 HTML Porfolio Project/assets/images/birthday-invite.png" alt="" height="200">
+    <img src="./assets/images/birthday-invite.png" alt="" height="200">
     <hr>
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
