--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Shashikant's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
    <hr/>
-    <h3><a href="/4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie-ranking.png" alt="" height="200">
-    <h3><a href="/4.3 HTML Porfolio Project/public/birthday-invite.html]">birthday-invite Project</a></h3>
+    <h3><a href="./public/birthday-invite.html]">birthday-invite Project</a></h3>
     <img src="./assets/images/birthday-invite.png" alt="" height="200">
     <hr>
     <a href="./public/about.html">About Me</a>
